--- a/index.html
+++ b/index.html
@@ -71,22 +71,19 @@
         <div>Velocidad de descarga</div>
         <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
 
-        <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y otros datos -->
+        <div id="ipInfo"></div>
 
-        <!-- Botón para medir velocidad de descarga -->
         <button class="button" onclick="measureDownload()">Iniciar Test</button>
 
-        <!-- Gráfica de progreso -->
         <canvas id="myChart"></canvas>
     </div>
 
     <script>
-        // Inicializar la gráfica con Chart.js
         var ctx = document.getElementById('myChart').getContext('2d');
         var chart = new Chart(ctx, {
             type: 'line',
             data: {
-                labels: [], // Etiquetas del tiempo
+                labels: [],
                 datasets: [{
                     label: 'Velocidad de Descarga',
                     borderColor: 'rgb(0, 170, 255)',
@@ -100,13 +97,10 @@
                     x: {
                         type: 'linear',
                         position: 'bottom',
-                        ticks: {
-                            display: false // Ocultar etiquetas del eje X (tiempo)
-                        }
+                        ticks: { display: false }
                     },
                     y: {
                         min: 0,
-                        max: 1000, // Hasta 1000 Mbps (1 Gbps)
                         title: {
                             display: true,
                             text: 'Mbps'
@@ -116,10 +110,9 @@
             }
         });
 
-        // Función para obtener la IP y otros datos usando ipinfo.io
         async function getIpInfo() {
             const ipInfoEl = document.getElementById('ipInfo');
-            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // token
+            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1');
             const data = await response.json();
             ipInfoEl.innerHTML = `
                 IP: ${data.ip} <br>
@@ -131,38 +124,33 @@
             `;
         }
 
-        // Función para medir la velocidad de descarga
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://speed.hetzner.de/300mb.bin"; // Archivo de 300 MB
-            const fileSize = 300 * 1024 * 1024; // Tamaño en bytes
-            // Medir la velocidad de descarga
-            const startDownload = new Date().getTime();
+            const imageUrl = "https://speed.hetzner.de/10MB.bin";
+            const fileSize = 10 * 1024 * 1024;
+            
+            const startDownload = performance.now();
             await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
-            const endDownload = new Date().getTime();
-            const downloadDuration = (endDownload - startDownload) / 1000; // En segundos
-            const maxDownloadSpeed = ((fileSize * 15) / (downloadDuration * 1024 * 1024)).toFixed(2);
-
-            // Progresivamente incrementamos la velocidad de descarga
-            let currentDownloadSpeed = 0;
-            const downloadInterval = setInterval(() => {
-                if (currentDownloadSpeed < maxDownloadSpeed) {
-                    currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
-                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
-
-                    // Agregar datos a la gráfica
+            const endDownload = performance.now();
+            const downloadDuration = (endDownload - startDownload) / 1000;
+            const downloadSpeed = ((fileSize) / (downloadDuration * 1024 * 1024)).toFixed(2);
+            
+            let currentSpeed = 0;
+            const interval = setInterval(() => {
+                if (currentSpeed < downloadSpeed) {
+                    currentSpeed += 0.5;
+                    downloadSpeedEl.innerHTML = `${currentSpeed.toFixed(2)} <span class="units">Mbps</span>`;
                     chart.data.labels.push(chart.data.labels.length + 1);
-                    chart.data.datasets[0].data.push(currentDownloadSpeed);
+                    chart.data.datasets[0].data.push(currentSpeed);
                     chart.update();
                 } else {
-                    clearInterval(downloadInterval);
-                    downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
+                    clearInterval(interval);
+                    downloadSpeedEl.innerHTML = `${downloadSpeed} <span class="units">Mbps</span> (finalizado)`;
                 }
             }, 50);
         }
 
-        // Llamar a la función para obtener IP y proveedor
         getIpInfo();
     </script>
 </body>
