--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
             const ipInfoEl = document.getElementById('ipInfo');
             const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // token
             const data = await response.json();
-            ipInfoEl.innerHTML = `
+            ipInfoEl.innerHTML = 
                 IP: ${data.ip} <br>
                 Ciudad: ${data.city} <br>
                 País: ${data.country} <br>
                 Región: ${data.region} <br>
                 Código de Área: ${data.postal} <br>
                 Proveedor: ${data.org}
-            `;
+            ;
         }
 
          // Función para medir la velocidad de descarga
@@ -157,13 +157,13 @@
             const downloadInterval = setInterval(() => {
                 if (currentDownloadSpeed < avgDownloadSpeed) {
                     currentDownloadSpeed += 10; // Incremento gradual de velocidad
-                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
+                    downloadSpeedEl.innerHTML = ${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>;
                     chart.data.labels.push(chart.data.labels.length + 1);
                     chart.data.datasets[0].data.push(currentDownloadSpeed);
                     chart.update();
                 } else {
                     clearInterval(downloadInterval);
-                    downloadSpeedEl.innerHTML = `${avgDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
+                    downloadSpeedEl.innerHTML = ${avgDownloadSpeed} <span class="units">Mbps</span> (finalizado);
                 }
             }, 50);
         }
@@ -173,7 +173,6 @@
     </script>
 </body>
 </html>
-
 
 
 
