--- a/index.html
+++ b/index.html
@@ -73,84 +73,107 @@
 
         <div id="ipInfo"></div>
 
-        <button class="button" onclick="measureDownload()">Iniciar Test</button>
+        <button class="button" id="startBtn">Iniciar Test</button>
 
         <canvas id="myChart"></canvas>
     </div>
 
     <script>
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var chart = new Chart(ctx, {
+        // === Configurar gráfico ===
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const chart = new Chart(ctx, {
             type: 'line',
             data: {
                 labels: [],
                 datasets: [{
-                    label: 'Velocidad de Descarga',
+                    label: 'Velocidad de Descarga (Mbps)',
                     borderColor: 'rgb(0, 170, 255)',
                     data: [],
-                    fill: false
+                    fill: false,
+                    tension: 0.2
                 }]
             },
             options: {
-                responsive: true,
+                animation: false,
                 scales: {
                     x: {
-                        type: 'linear',
-                        position: 'bottom',
-                        ticks: { display: false }
+                        title: { display: true, text: 'Tiempo (segundos)' }
                     },
                     y: {
                         min: 0,
-                        title: {
-                            display: true,
-                            text: 'Mbps'
-                        }
+                        title: { display: true, text: 'Mbps' }
                     }
                 }
             }
         });
 
+        // === Mostrar información de IP ===
         async function getIpInfo() {
-            const ipInfoEl = document.getElementById('ipInfo');
-            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1');
-            const data = await response.json();
-            ipInfoEl.innerHTML = `
-                IP: ${data.ip} <br>
-                Ciudad: ${data.city} <br>
-                País: ${data.country} <br>
-                Región: ${data.region} <br>
-                Código de Área: ${data.postal} <br>
-                Proveedor: ${data.org}
-            `;
+            try {
+                const response = await fetch('https://ipapi.co/json/');
+                const data = await response.json();
+                document.getElementById('ipInfo').innerHTML = `
+                    IP: ${data.ip}<br>
+                    Ciudad: ${data.city}<br>
+                    País: ${data.country_name}<br>
+                    Región: ${data.region}<br>
+                    Proveedor: ${data.org || 'Desconocido'}
+                `;
+            } catch (e) {
+                document.getElementById('ipInfo').textContent = "No se pudo obtener la información IP.";
+            }
         }
 
+        // === Test de descarga ===
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
-            downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://speed.hetzner.de/10MB.bin";
-            const fileSize = 10 * 1024 * 1024;
-            
-            const startDownload = performance.now();
-            await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
-            const endDownload = performance.now();
-            const downloadDuration = (endDownload - startDownload) / 1000;
-            const downloadSpeed = ((fileSize) / (downloadDuration * 1024 * 1024)).toFixed(2);
-            
-            let currentSpeed = 0;
-            const interval = setInterval(() => {
-                if (currentSpeed < downloadSpeed) {
-                    currentSpeed += 0.5;
-                    downloadSpeedEl.innerHTML = `${currentSpeed.toFixed(2)} <span class="units">Mbps</span>`;
-                    chart.data.labels.push(chart.data.labels.length + 1);
-                    chart.data.datasets[0].data.push(currentSpeed);
-                    chart.update();
-                } else {
-                    clearInterval(interval);
-                    downloadSpeedEl.innerHTML = `${downloadSpeed} <span class="units">Mbps</span> (finalizado)`;
-                }
-            }, 50);
+            const startBtn = document.getElementById('startBtn');
+
+            startBtn.disabled = true;
+            startBtn.textContent = "Midiendo...";
+            chart.data.labels = [];
+            chart.data.datasets[0].data = [];
+            chart.update();
+
+            try {
+                const imageUrl = "https://speed.hetzner.de/10MB.bin?" + Date.now();
+                const fileSize = 10 * 1024 * 1024; // 10 MB
+
+                const startTime = performance.now();
+                const response = await fetch(imageUrl, { cache: "no-store" });
+                await response.blob();
+                const endTime = performance.now();
+
+                const duration = (endTime - startTime) / 1000;
+                const speedMbps = ((fileSize * 8) / (duration * 1024 * 1024)).toFixed(2);
+
+                let progress = 0;
+                const step = speedMbps / 40;
+                const interval = setInterval(() => {
+                    if (progress < speedMbps) {
+                        progress += step;
+                        chart.data.labels.push(chart.data.labels.length / 10);
+                        chart.data.datasets[0].data.push(progress);
+                        chart.update();
+                        downloadSpeedEl.innerHTML = `${progress.toFixed(2)} <span class="units">Mbps</span>`;
+                    } else {
+                        clearInterval(interval);
+                        downloadSpeedEl.innerHTML = `${speedMbps} <span class="units">Mbps</span> (finalizado)`;
+                        startBtn.disabled = false;
+                        startBtn.textContent = "Iniciar Test";
+                    }
+                }, 100);
+
+            } catch (error) {
+                downloadSpeedEl.textContent = "Error en el test.";
+                startBtn.disabled = false;
+                startBtn.textContent = "Iniciar Test";
+                console.error(error);
+            }
         }
 
+        // === Eventos ===
+        document.getElementById('startBtn').addEventListener('click', measureDownload);
         getIpInfo();
     </script>
 </body>
