--- a/index.html
+++ b/index.html
@@ -1,181 +1,135 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test de Velocidad MTM</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background: linear-gradient(135deg, #6A11CB 0%, #2575FC 100%);
-            color: #fff;
-            text-align: center;
-        }
-        .container {
-            max-width: 500px;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            width: 90%;
-        }
-        .title {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        .speed {
-            font-size: 36px;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-        .units {
-            font-size: 18px;
-            font-weight: normal;
-        }
-        .button {
-            background-color: #00aaff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s;
-            margin: 5px;
-        }
-        .button:hover {
-            background-color: #0077cc;
-        }
-        #myChart {
-            width: 100%;
-            height: 250px;
-            margin-top: 20px;
-        }
-        #ipInfo {
-            margin-top: 15px;
-            font-size: 16px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test de Velocidad MTM</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: linear-gradient(135deg, #6A11CB 0%, #2575FC 100%);
+      color: #fff;
+      text-align: center;
+    }
+    .container {
+      max-width: 500px;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      width: 90%;
+    }
+    .title { font-size: 24px; margin-bottom: 20px; }
+    .speed { font-size: 36px; font-weight: bold; margin: 10px 0; }
+    .units { font-size: 18px; }
+    .button {
+      background-color: #00aaff;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background 0.3s;
+      margin: 5px;
+    }
+    .button:hover { background-color: #0077cc; }
+    #myChart { width: 100%; height: 250px; margin-top: 20px; }
+    #ipInfo { margin-top: 15px; font-size: 16px; }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="title">Test de Velocidad MTM</div>
+  <div class="container">
+    <div class="title">Test de Velocidad MTM</div>
 
-        <div>Velocidad de descarga</div>
-        <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
+    <div>Velocidad de descarga</div>
+    <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
 
-        <div id="ipInfo"></div>
+    <div id="ipInfo">Cargando información IP...</div>
 
-        <button class="button" id="startBtn">Iniciar Test</button>
+    <button class="button" id="startBtn">Iniciar Test</button>
 
-        <canvas id="myChart"></canvas>
-    </div>
+    <canvas id="myChart"></canvas>
+  </div>
 
-    <script>
-        // === Configurar gráfico ===
-        const ctx = document.getElementById('myChart').getContext('2d');
-        const chart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: [],
-                datasets: [{
-                    label: 'Velocidad de Descarga (Mbps)',
-                    borderColor: 'rgb(0, 170, 255)',
-                    data: [],
-                    fill: false,
-                    tension: 0.2
-                }]
-            },
-            options: {
-                animation: false,
-                scales: {
-                    x: {
-                        title: { display: true, text: 'Tiempo (segundos)' }
-                    },
-                    y: {
-                        min: 0,
-                        title: { display: true, text: 'Mbps' }
-                    }
-                }
-            }
-        });
-
-        // === Mostrar información de IP ===
-        async function getIpInfo() {
-            try {
-                const response = await fetch('https://ipapi.co/json/');
-                const data = await response.json();
-                document.getElementById('ipInfo').innerHTML = `
-                    IP: ${data.ip}<br>
-                    Ciudad: ${data.city}<br>
-                    País: ${data.country_name}<br>
-                    Región: ${data.region}<br>
-                    Proveedor: ${data.org || 'Desconocido'}
-                `;
-            } catch (e) {
-                document.getElementById('ipInfo').textContent = "No se pudo obtener la información IP.";
-            }
+  <script>
+    const ctx = document.getElementById('myChart').getContext('2d');
+    const chart = new Chart(ctx, {
+      type: 'line',
+      data: { labels: [], datasets: [{
+        label: 'Velocidad de Descarga (Mbps)',
+        borderColor: 'rgb(0, 170, 255)',
+        data: [],
+        fill: false,
+        tension: 0.3
+      }]},
+      options: {
+        animation: false,
+        scales: {
+          x: { title: { display: true, text: 'Prueba #' } },
+          y: { min: 0, title: { display: true, text: 'Mbps' } }
         }
+      }
+    });
 
-        // === Test de descarga ===
-        async function measureDownload() {
-            const downloadSpeedEl = document.getElementById('downloadSpeed');
-            const startBtn = document.getElementById('startBtn');
+    // Obtener IP pública
+    async function getIpInfo() {
+      try {
+        const res = await fetch('https://api64.ipify.org?format=json');
+        const data = await res.json();
+        document.getElementById('ipInfo').innerHTML = `Tu IP: ${data.ip}`;
+      } catch {
+        document.getElementById('ipInfo').innerHTML = "No se pudo obtener IP.";
+      }
+    }
 
-            startBtn.disabled = true;
-            startBtn.textContent = "Midiendo...";
-            chart.data.labels = [];
-            chart.data.datasets[0].data = [];
-            chart.update();
+    // Test de descarga
+    async function measureDownload() {
+      const downloadSpeedEl = document.getElementById('downloadSpeed');
+      const startBtn = document.getElementById('startBtn');
+      startBtn.disabled = true;
+      startBtn.textContent = "Midiendo...";
+      chart.data.labels = [];
+      chart.data.datasets[0].data = [];
+      chart.update();
 
-            try {
-                const imageUrl = "https://speed.hetzner.de/10MB.bin?" + Date.now();
-                const fileSize = 10 * 1024 * 1024; // 10 MB
+      const testFile = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"; // archivo pequeño
+      const fileSizeBytes = 104857; // 102 KB aprox
+      const numTests = 8;
+      let speeds = [];
 
-                const startTime = performance.now();
-                const response = await fetch(imageUrl, { cache: "no-store" });
-                await response.blob();
-                const endTime = performance.now();
+      for (let i = 1; i <= numTests; i++) {
+        const start = performance.now();
+        await fetch(testFile + "?t=" + Date.now(), { cache: "no-store" }).then(r => r.blob());
+        const end = performance.now();
 
-                const duration = (endTime - startTime) / 1000;
-                const speedMbps = ((fileSize * 8) / (duration * 1024 * 1024)).toFixed(2);
+        const duration = (end - start) / 1000;
+        const bitsLoaded = fileSizeBytes * 8;
+        const speedMbps = (bitsLoaded / (duration * 1024 * 1024)).toFixed(2);
 
-                let progress = 0;
-                const step = speedMbps / 40;
-                const interval = setInterval(() => {
-                    if (progress < speedMbps) {
-                        progress += step;
-                        chart.data.labels.push(chart.data.labels.length / 10);
-                        chart.data.datasets[0].data.push(progress);
-                        chart.update();
-                        downloadSpeedEl.innerHTML = `${progress.toFixed(2)} <span class="units">Mbps</span>`;
-                    } else {
-                        clearInterval(interval);
-                        downloadSpeedEl.innerHTML = `${speedMbps} <span class="units">Mbps</span> (finalizado)`;
-                        startBtn.disabled = false;
-                        startBtn.textContent = "Iniciar Test";
-                    }
-                }, 100);
+        speeds.push(parseFloat(speedMbps));
+        chart.data.labels.push(i);
+        chart.data.datasets[0].data.push(speedMbps);
+        chart.update();
+        downloadSpeedEl.innerHTML = `${speedMbps} <span class="units">Mbps</span>`;
+        await new Promise(r => setTimeout(r, 300));
+      }
 
-            } catch (error) {
-                downloadSpeedEl.textContent = "Error en el test.";
-                startBtn.disabled = false;
-                startBtn.textContent = "Iniciar Test";
-                console.error(error);
-            }
-        }
+      const avgSpeed = (speeds.reduce((a,b)=>a+b,0)/speeds.length).toFixed(2);
+      downloadSpeedEl.innerHTML = `${avgSpeed} <span class="units">Mbps</span> (promedio)`;
+      startBtn.disabled = false;
+      startBtn.textContent = "Iniciar Test";
+    }
 
-        // === Eventos ===
-        document.getElementById('startBtn').addEventListener('click', measureDownload);
-        getIpInfo();
-    </script>
+    document.getElementById('startBtn').addEventListener('click', measureDownload);
+    getIpInfo();
+  </script>
 </body>
 </html>
 
