--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     .button:hover { background-color: #0077cc; }
     #myChart { width: 100%; height: 250px; margin-top: 20px; }
-    #ipInfo { margin-top: 15px; font-size: 16px; }
+    #ipInfo { margin-top: 15px; font-size: 16px; line-height: 1.4; }
   </style>
 </head>
 <body>
@@ -72,24 +72,32 @@
       options: {
         animation: false,
         scales: {
-          x: { title: { display: true, text:  } },
+          x: { title: { display: true, text: 'Prueba #' } },
           y: { min: 0, title: { display: true, text: 'Mbps' } }
         }
       }
     });
 
-    // Obtener IP pública
+    // === Obtener IP y ubicación ===
     async function getIpInfo() {
       try {
-        const res = await fetch('https://api64.ipify.org?format=json');
+        const res = await fetch('https://ipapi.co/json/');
         const data = await res.json();
-        document.getElementById('ipInfo').innerHTML = `Tu IP: ${data.ip}`;
-      } catch {
-        document.getElementById('ipInfo').innerHTML = "No se pudo obtener IP.";
+
+        document.getElementById('ipInfo').innerHTML = `
+          🌐 <b>IP:</b> ${data.ip} <br>
+          📍 <b>Ciudad:</b> ${data.city || 'Desconocida'} <br>
+          🗺️ <b>Región:</b> ${data.region || 'Desconocida'} <br>
+          🌎 <b>País:</b> ${data.country_name || 'Desconocido'} <br>
+          🏢 <b>Proveedor:</b> ${data.org || 'No disponible'}
+        `;
+      } catch (error) {
+        document.getElementById('ipInfo').innerHTML = "⚠️ No se pudo obtener la información IP.";
+        console.error(error);
       }
     }
 
-    // Test de descarga
+    // === Test de descarga ===
     async function measureDownload() {
       const downloadSpeedEl = document.getElementById('downloadSpeed');
       const startBtn = document.getElementById('startBtn');
@@ -122,7 +130,7 @@
       }
 
       const avgSpeed = (speeds.reduce((a,b)=>a+b,0)/speeds.length).toFixed(2);
-      downloadSpeedEl.innerHTML = `${avgSpeed} <span class="units">Mbps</span>`;
+      downloadSpeedEl.innerHTML = `${avgSpeed} <span class="units">Mbps</span> (promedio)`;
       startBtn.disabled = false;
       startBtn.textContent = "Iniciar Test";
     }
@@ -132,6 +140,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
