--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/molavita.github.io/speed/blob/gh-pages/imagen/speed.png">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test de Velocidad MTM</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -141,6 +141,7 @@
   </script>
 </body>
 </html>
+
 
 
 
