--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
           downloadSpeedEl.innerHTML = `${speed.toFixed(2)} <span class="units">Mbps</span>`;
           testInfoEl.textContent = `Prueba ${i+1}: ${speed.toFixed(2)} Mbps`;
           
+        } catch (error) {
+          console.error(`Error en prueba ${i+1}:`, error);
+          statusEl.textContent = `Error en prueba ${i+1}, continuando...`;
+          speeds.push(0);
+        }
         
         // Pequeña pausa entre pruebas
         if (i < 2) {
@@ -262,6 +267,10 @@
           resolve(finalSpeed);
         };
 
+        xhr.onerror = function() {
+          cleanup();
+          reject(new Error('Error en la descarga'));
+        };
 
         // Configurar timeout para cancelar después del tiempo especificado
         timer = setTimeout(() => {
@@ -295,6 +304,7 @@
   </script>
 </body>
 </html>
+
 
 
 
